[gd_scene load_steps=30 format=2]

[ext_resource path="res://Characters/Enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://Art/gremlinIdle/blueGremlinIdleSS.png" type="Texture" id=2]
[ext_resource path="res://Art/gremlinRun/blueGremlinRunSS.png" type="Texture" id=3]
[ext_resource path="res://Art/v1.1 dungeon crawler 16x16 pixel pack/effects (new)/enemy_afterdead_explosion_anim_spritesheet.png" type="Texture" id=4]
[ext_resource path="res://Characters/Enemies/Gremlin/Gremlin.gd" type="Script" id=5]
[ext_resource path="res://Characters/Enemies/Gremlin/gremlinFSM.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=18]
radius = 4.47214

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 2 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 2 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 2 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=28]
atlas = ExtResource( 2 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=29]
atlas = ExtResource( 2 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=30]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=31]
atlas = ExtResource( 3 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=32]
atlas = ExtResource( 3 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 3 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 3 )
region = Rect2( 64, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 3 )
region = Rect2( 80, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 4 )
region = Rect2( 16, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 4 )
region = Rect2( 32, 0, 16, 16 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 4 )
region = Rect2( 48, 0, 16, 16 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 30 ), SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ), SubResource( 35 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 17 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
} ]

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=23]
resource_name = "death"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ "idle", "dead" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.6, 0.7, 0.8, 0.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 0, 1, 2, 3 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}
tracks/3/type = "method"
tracks/3/path = NodePath(".")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 1 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}

[sub_resource type="Animation" id=22]
resource_name = "hurt"
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ false, true, false, true ]
}

[sub_resource type="Animation" id=20]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "idle" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="Animation" id=21]
resource_name = "move"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "move" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AnimatedSprite:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[node name="Gremlin" instance=ExtResource( 1 )]
script = ExtResource( 5 )
acceleration = 30
max_speed = 75

[node name="blue" type="Node" parent="." index="0"]

[node name="FiniteStateMachine" parent="." index="1"]
script = ExtResource( 6 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 0, -1 )
shape = SubResource( 18 )

[node name="AnimatedSprite" parent="." index="3"]
visible = false
frames = SubResource( 7 )
animation = "idle"

[node name="AnimationPlayer" parent="." index="4"]
anims/RESET = SubResource( 19 )
anims/death = SubResource( 23 )
anims/hurt = SubResource( 22 )
anims/idle = SubResource( 20 )
anims/move = SubResource( 21 )

[node name="PathTimer" parent="." index="5"]
wait_time = 0.2

[node name="AttackTimer" type="Timer" parent="." index="6"]
wait_time = 1.5
one_shot = true

[node name="AimRayCast" type="RayCast2D" parent="." index="7"]
enabled = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
